tests/union/union.exp
Error ------------------------------------------------------------------------------------------------ issue-198.js:9:20

Cannot call `str.toFixed` because property `toFixed` is missing in `String` [1]. [prop-missing]

   issue-198.js:9:20
     9|         return str.toFixed();
                           ^^^^^^^

References:
   <BUILTINS>/core.js:460:39
   460|     toFixed(fractionDigits?: number): string;
                                              ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ issue-324.js:8:10

Cannot assign `barstr` to `foostr` because `Bar` [1] is incompatible with `Foo` [2]. [incompatible-type]

   issue-324.js:8:10
   8| foostr = barstr;
               ^^^^^^

References:
   issue-324.js:6:13
   6| var barstr: Bar | string = new Bar();
                  ^^^ [1]
   issue-324.js:5:13
   5| var foostr: Foo | string = new Foo();
                  ^^^ [2]


Error ----------------------------------------------------------------------------------------------- issue-7322.js:22:2

Cannot cast `x.noReturn()` to number because undefined [1] is incompatible with number [2]. [incompatible-cast]

   issue-7322.js:22:2
   22| (x.noReturn(): number);
        ^^^^^^^^^^^^

References:
   issue-7322.js:4:13
    4|   noReturn() { }
                   ^ [1]
   issue-7322.js:22:16
   22| (x.noReturn(): number);
                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- union.js:2:5

Cannot call `bar` with `0` bound to `x` because number [1] is incompatible with string [2]. [incompatible-call]

   union.js:2:5
   2| bar(0);
          ^ [1]

References:
   union.js:1:28
   1| function bar(x: Document | string): void { }
                                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:8:13

Cannot assign `new E()` to `c` because `D` [1] is incompatible with `C` [2]. [incompatible-type]

   union.js:8:13
   8|   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
                  ^^^^^^^ [1]

References:
   union.js:8:9
   8|   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
              ^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:9:19

`D` [1] is incompatible with `C` [2]. [incompatible-type]

   union.js:9:19
   9|   function qux(e: E) { } // this annotation is an error: is it C, or is it D?
                        ^

References:
   union.js:5:7
   5| class D { }
            ^ [1]
   union.js:4:7
   4| class C { }
            ^ [2]



Found 6 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
